Removed Rival mood effect Till there is a better way to Track Who is a Rival and who isnt, as of right now there is no easy way to determen, and or i need to figure out how to look at someone opioun of them is

--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomToils_Recipe.cs" />
+    <Compile Include="DebugHelpers.cs" />
     <Compile Include="JobDriver_Helping.cs" />
     <Compile Include="HelpersInitializer.cs" />
     <Compile Include="PawnHelperComponent.cs" />
