--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -60,6 +60,8 @@
   <ItemGroup>
     <Compile Include="CustomToils_Recipe.cs" />
     <Compile Include="DebugHelpers.cs" />
+    <Compile Include="HelperMechanics.cs" />
+    <Compile Include="HelperSocialMechanics.cs" />
     <Compile Include="JobDriver_Helping.cs" />
     <Compile Include="HelpersInitializer.cs" />
     <Compile Include="PawnHelperComponent.cs" />
