Added Helpers controls onto Construction of things, anything with a frame can benifte from haveing a helper.
Still have Issues with helper crafting system

--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -64,7 +64,11 @@
     <Compile Include="HelperMechanics.cs" />
     <Compile Include="HelperSocialMechanics.cs" />
     <Compile Include="JobDriver_Helping.cs" />
-    <Compile Include="HelpersInitializer.cs" />
+    <Compile Include="Patching\HelpersInitializer.cs" />
+    <Compile Include="Patching\Patch_PostFixCunstruction.cs" />
+    <Compile Include="Patching\UnUSed_Patch_DoBill.cs" />
+    <Compile Include="Patching\Patch_PreCombinedConstruction.cs" />
+    <Compile Include="Patching\Patch_PostToilsRecipe.cs" />
     <Compile Include="PawnHelperComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkillDefOf.cs" />
