--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -15,13 +15,13 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>none</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>portable</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\..\1.5\Assemblies\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>5</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -61,15 +61,27 @@
     <Compile Include="CustomToils_Recipe.cs" />
     <Compile Include="DebugHelpers.cs" />
     <Compile Include="HelperMechanics.cs" />
+    <Compile Include="HelpersModSettings.cs" />
     <Compile Include="HelperSocialMechanics.cs" />
     <Compile Include="JobDriver_Helping.cs" />
     <Compile Include="Patching\HelpersInitializer.cs" />
+    <Compile Include="Patching\Patch_AddHelperComp.cs" />
     <Compile Include="Patching\Patch_PostFixCunstruction.cs" />
-    <Compile Include="Patching\Patch_PostToilsRecipe - Copy.cs" />
     <Compile Include="Patching\Patch_PostToilsRecipe.cs" />
+    <Compile Include="Patching\unused\PatchUnknown.cs" />
+    <Compile Include="Patching\unused\Patch_CheckSurgeryFail.cs" />
+    <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_RecipeSuccessChance.cs" />
+    <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_SurgeonSuccessChance.cs" />
+    <Compile Include="Patching\unused\SurgeryOutcomeEffectDef_Patch.cs" />
     <Compile Include="PawnHelperComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkillDefOf.cs" />
+    <Compile Include="TestHelpers.cs" />
+    <Compile Include="SurgeryOutcomeComp_Helpers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"D:\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64.exe"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
