--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -42,6 +42,7 @@
       <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -67,20 +68,24 @@
     <Compile Include="Helper Base Files\SkillDefOf.cs" />
     <Compile Include="Patching\HelpersInitializer.cs" />
     <Compile Include="Patching\Patch_AddHelperComp.cs" />
+    <Compile Include="Patching\Patch_PreFixMine.cs" />
     <Compile Include="Patching\Patch_PostFixCunstruction.cs" />
     <Compile Include="Patching\Patch_PostToilsRecipe.cs" />
     <Compile Include="Patching\unused\PatchUnknown.cs" />
     <Compile Include="Patching\unused\Patch_CheckSurgeryFail.cs" />
     <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_RecipeSuccessChance.cs" />
     <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_SurgeonSuccessChance.cs" />
+    <Compile Include="Patching\unused\Patch_transpilerMine.cs" />
+    <Compile Include="Patching\unused\Patch_transpilerMine1.cs" />
     <Compile Include="Patching\unused\SurgeryOutcomeEffectDef_Patch.cs" />
     <Compile Include="Plants\Patch_PlantSow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelper.cs" />
     <Compile Include="TestHelpers.cs" />
     <Compile Include="SurgeryOutcomeComp_Helpers.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Helper Base Files\Plantsa\" />
+    <Content Include="Extra\What you know about this Mod.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
