--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -1,6 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <Target Name="CopyCSAndTxtFiles" AfterTargets="Build">
+    <!-- Define the destination directories -->
+    <PropertyGroup>
+      <DestinationDir>D:\SteamLibrary\steamapps\common\RimWorld\Mods\Helpers\-z BASE FIles\</DestinationDir>
+      <DefsDir>D:\SteamLibrary\steamapps\common\RimWorld\Mods\Helpers\1.5\Defs\</DefsDir>
+    </PropertyGroup>
+    <!-- Create the destination directory if it doesn't exist -->
+    <MakeDir Directories="$(DestinationDir)" />
+    <!-- Collect all .cs and .txt files, excluding 'unused', 'obj', and 'Properties' folders -->
+    <ItemGroup>
+      <SourceFiles Include="$(ProjectDir)**\*.cs;$(ProjectDir)**\*.txt" Exclude="$(ProjectDir)**\unused\**\*.*;$(ProjectDir)obj\**\*.*;$(ProjectDir)Properties\**\*.*" />
+    </ItemGroup>
+    <!-- Collect all .xml files from the Defs directory -->
+    <ItemGroup>
+      <XmlFiles Include="$(DefsDir)**\*.xml" />
+    </ItemGroup>
+    <!-- Copy the collected .cs, .txt, and .xml files to the destination directory without preserving folder structure -->
+    <Copy SourceFiles="@(SourceFiles);@(XmlFiles)" DestinationFolder="$(DestinationDir)" />
+  </Target>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -59,33 +78,53 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper Base Files\Hediffs\AssistantHediff.cs" />
+    <Compile Include="Helper Base Files\Hediffs\LeaderHediff.cs" />
     <Compile Include="Helper Base Files\DebugHelpers.cs" />
     <Compile Include="Helper Base Files\HelperMechanics.cs" />
     <Compile Include="Helper Base Files\HelpersModSettings.cs" />
     <Compile Include="Helper Base Files\HelperSocialMechanics.cs" />
     <Compile Include="Helper Base Files\JobDriver_Helping.cs" />
     <Compile Include="Helper Base Files\PawnHelperComponent.cs" />
-    <Compile Include="Helper Base Files\SkillDefOf.cs" />
+    <Compile Include="Helper Base Files\unused\SkillDefOf.cs" />
     <Compile Include="Patching\HelpersInitializer.cs" />
-    <Compile Include="Patching\Patch_AddHelperComp.cs" />
-    <Compile Include="Patching\Patch_PreFixMine.cs" />
-    <Compile Include="Patching\Patch_PostFixCunstruction.cs" />
-    <Compile Include="Patching\Patch_PostToilsRecipe.cs" />
-    <Compile Include="Patching\Patch_transpilerMine.cs" />
     <Compile Include="Patching\unused\PatchUnknown.cs" />
+    <Compile Include="Patching\unused\Patch_AddHelperComp.cs" />
     <Compile Include="Patching\unused\Patch_CheckSurgeryFail.cs" />
+    <Compile Include="Patching\unused\Patch_PlantSow.cs" />
+    <Compile Include="Patching\unused\Patch_PostFixCunstruction.cs" />
+    <Compile Include="Patching\unused\Patch_PostToilsRecipe.cs" />
+    <Compile Include="Patching\unused\Patch_PreFixMine.cs" />
     <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_RecipeSuccessChance.cs" />
     <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_SurgeonSuccessChance.cs" />
+    <Compile Include="Patching\unused\Patch_transpilerMine.cs" />
     <Compile Include="Patching\unused\Patch_transpilerMine1.cs" />
     <Compile Include="Patching\unused\SurgeryOutcomeEffectDef_Patch.cs" />
-    <Compile Include="Plants\Patch_PlantSow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelper.cs" />
     <Compile Include="TestHelpers.cs" />
     <Compile Include="SurgeryOutcomeComp_Helpers.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Extra\What you know about this Mod.txt" />
+    <Content Include="..\..\1.5\Defs\CustomHediffs\DynamicStatsDefs.xml">
+      <Link>Extra\DynamicStatsDefs.xml</Link>
+    </Content>
+    <Content Include="..\..\1.5\Defs\JobDefs\Jobs_Helping.xml">
+      <Link>Extra\Jobs_Helping.xml</Link>
+    </Content>
+    <Content Include="..\..\1.5\Defs\SkillDefs\Skills_Helpers.xml">
+      <Link>Extra\Skills_Helpers.xml</Link>
+    </Content>
+    <Content Include="..\..\1.5\Defs\ThingDefs\ThingDefs_Races_Helpers.xml">
+      <Link>Extra\ThingDefs_Races_Helpers.xml</Link>
+    </Content>
+    <Content Include="..\..\1.5\Defs\ThoughtDef\Thoughts_Helpers.xml">
+      <Link>Extra\Thoughts_Helpers.xml</Link>
+    </Content>
+    <Content Include="Extra\ModPlaning Base.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Plants\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
