--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -4,7 +4,7 @@
   <Target Name="CopyCSAndTxtFiles" AfterTargets="Build">
     <!-- Define the destination directory -->
     <PropertyGroup>
-      <DestinationDir>D:\SteamLibrary\steamapps\common\RimWorld\Mods\Helpers\-z BASE FIles\</DestinationDir>
+      <DestinationDir>D:\SteamLibrary\steamapps\common\RimWorld\Mods\Helpers\zBASEFIles\</DestinationDir>
       <DefsDir>D:\SteamLibrary\steamapps\common\RimWorld\Mods\Helpers\1.5\Defs\</DefsDir>
       <AboutDir>D:\SteamLibrary\steamapps\common\RimWorld\Mods\Helpers\About\</AboutDir>
       <PatchesDir>D:\SteamLibrary\steamapps\common\RimWorld\Mods\Helpers\Patches\</PatchesDir>
@@ -19,10 +19,10 @@
     <ItemGroup>
       <XmlFiles Include="$(DefsDir)**\*.xml" />
     </ItemGroup>
-    <!-- Collect all files from About and Patches folders -->
+    <!-- Collect all files from About and Patches folders, excluding Preview.png and About.xml -->
     <ItemGroup>
-      <AboutFiles Include="$(AboutDir)**\*.*" />
-      <PatchesFiles Include="$(PatchesDir)**\*.*" />
+      <AboutFiles Include="$(AboutDir)**\*.*" Exclude="$(AboutDir)\Preview.png;$(AboutDir)\About.xml" />
+      <PatchesFiles Include="$(PatchesDir)**\*.*" Exclude="$(PatchesDir)\Preview.png;$(PatchesDir)\About.xml" />
     </ItemGroup>
     <!-- Copy all collected files to the destination directory without preserving folder structure -->
     <Copy SourceFiles="@(SourceFiles);@(XmlFiles);@(AboutFiles);@(PatchesFiles)" DestinationFolder="$(DestinationDir)" />
@@ -85,37 +85,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helper Base Files\Hediffs\AssistantHediff.cs" />
-    <Compile Include="Helper Base Files\Hediffs\LeaderHediff.cs" />
+    <Compile Include="Helper Base Files\Parts\AssistantParts.cs" />
+    <Compile Include="Helper Base Files\Parts\LeaderParts.cs" />
     <Compile Include="Helper Base Files\DebugHelpers.cs" />
     <Compile Include="Helper Base Files\HelperMechanics.cs" />
     <Compile Include="Helper Base Files\HelpersModSettings.cs" />
     <Compile Include="Helper Base Files\HelperSocialMechanics.cs" />
     <Compile Include="Helper Base Files\JobDriver_Helping.cs" />
     <Compile Include="Helper Base Files\PawnHelperComponent.cs" />
-    <Compile Include="Helper Base Files\unused\SkillDefOf.cs" />
-    <Compile Include="Patching\HelpersInitializer.cs" />
-    <Compile Include="Patching\unused\PatchUnknown.cs" />
-    <Compile Include="Patching\unused\Patch_AddHelperComp.cs" />
-    <Compile Include="Patching\unused\Patch_CheckSurgeryFail.cs" />
-    <Compile Include="Patching\unused\Patch_PlantSow.cs" />
-    <Compile Include="Patching\unused\Patch_PostFixCunstruction.cs" />
-    <Compile Include="Patching\unused\Patch_PostToilsRecipe.cs" />
-    <Compile Include="Patching\unused\Patch_PreFixMine.cs" />
-    <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_RecipeSuccessChance.cs" />
-    <Compile Include="Patching\unused\Patch_SurgeryOutcomeComp_SurgeonSuccessChance.cs" />
-    <Compile Include="Patching\unused\Patch_transpilerMine.cs" />
-    <Compile Include="Patching\unused\Patch_transpilerMine1.cs" />
-    <Compile Include="Patching\unused\SurgeryOutcomeEffectDef_Patch.cs" />
+    <Compile Include="HarmonyPatching\HelpersInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelper.cs" />
     <Compile Include="TestHelpers.cs" />
-    <Compile Include="SurgeryOutcomeComp_Helpers.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\1.5\Defs\CustomHediffs\DynamicStatsDefs.xml">
-      <Link>Extra\DynamicStatsDefs.xml</Link>
-    </Content>
     <Content Include="..\..\1.5\Defs\JobDefs\Jobs_Helping.xml">
       <Link>Extra\Jobs_Helping.xml</Link>
     </Content>
@@ -131,11 +114,12 @@
     <Content Include="..\..\About\ModMetaData.xml">
       <Link>Extra\ModMetaData.xml</Link>
     </Content>
+    <Content Include="..\..\Patches\StatParts_HelperStatsAdjustments.xml">
+      <Link>Extra\StatParts_HelperStatsAdjustments.xml</Link>
+    </Content>
     <Content Include="Extra\ModPlaning Base.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Plants\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"D:\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64.exe"
