--- a/Source/Helpers/Helpers.csproj
+++ b/Source/Helpers/Helpers.csproj
@@ -83,20 +83,25 @@
       <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HarmonyPatching\ReflectionHelper.cs" />
+    <Compile Include="Helper Base Files\HelperUI.cs" />
     <Compile Include="Helper Base Files\Parts\AssistantParts.cs" />
     <Compile Include="Helper Base Files\Parts\LeaderParts.cs" />
     <Compile Include="Helper Base Files\DebugHelpers.cs" />
-    <Compile Include="Helper Base Files\HelperMechanics.cs" />
-    <Compile Include="Helper Base Files\HelpersModSettings.cs" />
     <Compile Include="Helper Base Files\HelperSocialMechanics.cs" />
     <Compile Include="Helper Base Files\JobDriver_Helping.cs" />
     <Compile Include="Helper Base Files\PawnHelperComponent.cs" />
     <Compile Include="HarmonyPatching\HelpersInitializer.cs" />
+    <Compile Include="Helper Base Files\TestHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReflectionHelper.cs" />
-    <Compile Include="TestHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\1.5\Defs\JobDefs\Jobs_Helping.xml">
